# deepface-streamlit

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
